objects/Flosum__Metadata_Item__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__CRC32__c</fullName>
        <label>CRC32</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Folder__c</fullName>
        <label>Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Is_Retrieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Retrieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Label__c</fullName>
        <description>Readable Name of Component</description>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Modified_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Updated_By__c</fullName>
        <label>Last Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Snapshot__c</fullName>
        <label>Snapshot</label>
        <referenceTo>Flosum__Snapshot__c</referenceTo>
        <relationshipLabel>Metadata Items</relationshipLabel>
        <relationshipName>Metadata_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Metadata Item</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>Flosum__Label__c</columns>
        <columns>Flosum__API_Name__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Metadata Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Items</pluralLabel>
    <recordTypes>
        <fullName>Flosum__ApexClass</fullName>
        <active>true</active>
        <label>ApexClass</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ApexComponent</fullName>
        <active>true</active>
        <label>ApexComponent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ApexPage</fullName>
        <active>true</active>
        <label>ApexPage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ApexTrigger</fullName>
        <active>true</active>
        <label>ApexTrigger</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AppMenu</fullName>
        <active>true</active>
        <label>AppMenu</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ApprovalProcess</fullName>
        <active>true</active>
        <label>ApprovalProcess</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AssignmentRule</fullName>
        <active>true</active>
        <label>AssignmentRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AssignmentRules</fullName>
        <active>true</active>
        <label>AssignmentRules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AutoResponseRule</fullName>
        <active>true</active>
        <label>AutoResponseRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__AutoResponseRules</fullName>
        <active>true</active>
        <label>AutoResponseRules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__BaseSharingRule</fullName>
        <active>true</active>
        <label>BaseSharingRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CompactLayout</fullName>
        <active>true</active>
        <label>CompactLayout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CriteriaBasedSharingRule</fullName>
        <active>true</active>
        <label>CriteriaBasedSharingRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomApplication</fullName>
        <active>true</active>
        <label>CustomApplication</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomApplicationComponent</fullName>
        <active>true</active>
        <label>CustomApplicationComponent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomField</fullName>
        <active>true</active>
        <label>CustomField</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomLabel</fullName>
        <active>true</active>
        <label>CustomLabel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomLabels</fullName>
        <active>true</active>
        <label>CustomLabels</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomObject</fullName>
        <active>true</active>
        <label>CustomObject</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomPageWebLink</fullName>
        <active>true</active>
        <label>CustomPageWebLink</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomPermission</fullName>
        <active>true</active>
        <label>CustomPermission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__CustomTab</fullName>
        <active>true</active>
        <label>CustomTab</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Dashboard</fullName>
        <active>true</active>
        <label>Dashboard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__DashboardFolder</fullName>
        <active>true</active>
        <label>DashboardFolder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Document</fullName>
        <active>true</active>
        <label>Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__DocumentFolder</fullName>
        <active>true</active>
        <label>DocumentFolder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EmailFolder</fullName>
        <active>true</active>
        <label>EmailFolder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EmailTemplate</fullName>
        <active>true</active>
        <label>EmailTemplate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EmailTemplateFolder</fullName>
        <active>true</active>
        <label>EmailTemplateFolder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EntitlementProcess</fullName>
        <active>true</active>
        <label>EntitlementProcess</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__EntitlementTemplate</fullName>
        <active>true</active>
        <label>EntitlementTemplate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__FieldSet</fullName>
        <active>true</active>
        <label>FieldSet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__FlexiPage</fullName>
        <active>true</active>
        <label>FlexiPage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Group</fullName>
        <active>true</active>
        <label>Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__HomePageComponent</fullName>
        <active>true</active>
        <label>HomePageComponent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__HomePageLayout</fullName>
        <active>true</active>
        <label>HomePageLayout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Layout</fullName>
        <active>true</active>
        <label>Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ListView</fullName>
        <active>true</active>
        <label>ListView</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__MilestoneType</fullName>
        <active>true</active>
        <label>MilestoneType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__PermissonSet</fullName>
        <active>true</active>
        <label>PermissionSet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Profile</fullName>
        <active>true</active>
        <label>Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Queue</fullName>
        <active>true</active>
        <label>Queue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__RecordType</fullName>
        <active>true</active>
        <label>RecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__RemoteSiteSetting</fullName>
        <active>true</active>
        <label>RemoteSiteSetting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Report</fullName>
        <active>true</active>
        <label>Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ReportFolder</fullName>
        <active>true</active>
        <label>ReportFolder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ReportType</fullName>
        <active>true</active>
        <label>ReportType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Role</fullName>
        <active>true</active>
        <label>Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Settings</fullName>
        <active>true</active>
        <label>Settings</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__StaticResource</fullName>
        <active>true</active>
        <description>Represents a static resource file, often a code library in a ZIP file.</description>
        <label>StaticResource</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__ValidationRule</fullName>
        <active>true</active>
        <label>ValidationRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WebLink</fullName>
        <active>true</active>
        <label>WebLink</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__Workflow</fullName>
        <active>true</active>
        <label>Workflow</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WorkflowAlert</fullName>
        <active>true</active>
        <label>WorkflowAlert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WorkflowFieldUpdate</fullName>
        <active>true</active>
        <label>WorkflowFieldUpdate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WorkflowOutboundMessage</fullName>
        <active>true</active>
        <label>WorkflowOutboundMessage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WorkflowRule</fullName>
        <active>true</active>
        <label>WorkflowRule</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flosum__WorkflowTask</fullName>
        <active>true</active>
        <label>WorkflowTask</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>